--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
               <div class="col-md-5">
 
-                <img class="img-fluid " src="./assets/images/Hero.png" alt="" data-aos="fade-up"
+                <img class="img-fluid heroimaage" src="./assets/images/Hero.png" alt="" data-aos="fade-up"
                   data-aos-duration="1500">
 
 
