--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="intro">
           <div class="px-2 mx-2 px-md-5 mx-md-5">
             <div class="row mt-1 mt-md-5">
-              <div class="col-md-7 ">
+              <div class="col-md-7 pt-4">
 
                 <p class="hea1 mt-4 mb-0 mb-md-1 " data-aos="fade-up" data-aos-duration="1500">AI-powered Automation</p>
                 <p class="hea1 " data-aos="fade-up">for your clinical assessments</p>
