--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div id="main">
-          <p class="hea1 text-center  mt-5" data-aos="fade-up" data-aos-duration="1500">
+          <p class="hea1 text-center  mt-5 secondcontent" data-aos="fade-up" data-aos-duration="1500">
             A layer of AI in your Clinician’s and Clients journey
           </p>
           <div id="process-wrap">
