--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
             <!-- horizontal scrolling section -->
 
             <!-- mobile section starts -->
-          <p class="hea1 text-center my-4" data-aos="fade-up" data-aos-duration="1500">
+          <p class="hea1 text-center my-4" >
             Learn more about Martha - The Visit Assistant
           </p>
           <div class="row mb-2 mt-4 pt-3 rowBg2">
-            <p class="hea2 px-5 mt-3" data-aos="fade-up" data-aos-duration="1500">
+            <p class="hea2 px-5 mt-3">
               Voice Assisted Experience that captures notes and assessments through
               AI to seamlessly integrate into any EHR.
             </p>
