--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           </div> -->
             <!-- horizontal scrolling section -->
 
-            <div class=" scrollS d-block ">
+            <div class=" scrollS  pt-5  pt-md-2 ">
               <div id="animationWindow">
               
               </div>
