--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                   <div class="bgmarquee"></div>
                 </div>
               </div>
-              <div class="col-md-5">
+              <div class="col-md-5 d-flex align-self-end justify-content-end">
                 <!-- <img class="imghero " src="./assets/images/Hero.png" alt="" data-aos="fade-up" data-aos-duration="1500"> -->
-                <div class="imghero" id="animationContainer"></div>
+                <div class="imghero w-fit" id="animationContainer"></div>
               </div>
             </div>
           </div>
