--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
    target: '#animationWindow',
    path: "./Automynd.json", 
    duration: 1, 
-   speed: 'slow'
+   speed: 'medium'
   })
   </script>
   <!-- bootstrap script -->
