--- a/index.html
+++ b/index.html
@@ -641,9 +641,11 @@
       ScrollLottie({
    target: '#animationWindow',
    path: "./Automynd.json", 
-   duration: 1, 
-   speed: 'medium'
+   duration: 2, 
+   speed: 'fast',
+   loop:true
   })
+  
   </script>
   <!-- bootstrap script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
