--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
    target: '#animationWindow',
    path: "./Automynd.json", 
    duration: 2, 
-   speed: 'fast',
+   speed: 'medium',
    loop:true
   })
   
