--- a/index.html
+++ b/index.html
@@ -641,8 +641,8 @@
       ScrollLottie({
    target: '#animationWindow',
    path: "./Automynd.json", 
-   duration: 2, 
-   speed: 'medium',
+   duration: 4, 
+   speed: 'slow',
    loop:true
   })
   
